feat: added amin apis
